--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Thermostat</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
-    <script type="text/javascript" src="src/thermostat.js"></script>
-    <script type="text/javascript" src="jquery-3.5.1.js"></script>
-    <script type="text/javascript" src="interface.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <script type="text/javascript" src="javascript/src/thermostat.js"></script>
+    <script type="text/javascript" src="javascript/src/jquery-3.5.1.js"></script>
+    <script type="text/javascript" src="javascript/src/interface.js"></script>
 
 </head>
 
